--- a/css/style.css
+++ b/css/style.css
@@ -99,3 +99,18 @@ nav ul li a:hover {
 .form-item * {
   margin: 0.25rem;
 }
+
+#message-box-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.message-box {
+  border: 3px solid grey;
+  border-radius: 5px;
+  padding: 1rem 2rem;
+  margin: 0.5rem;
+  transition: transform 0.5s ease;
+  transform: translateX(calc(100% + 0.5rem));
+}
